# 2D-soil-segment

./: .gitignore  2D-UNET-draft.ipynb  2D-UNET-trainner.ipynb  2d_unet_trainer.py  2d_unet_trainer_standalone.py  NPK_KMEANS_FULL.ipynb  NPK_SAM_vs_KMEAN_.ipynb  README.md  Todo List.md  app.py  app_ver2.py  cli.py  custom_unet.py  get_npk.ipynb  get_npk.py  get_npk_only.ipynb  main.ipynb  main.py  main_modified.ipynb  npk_using_regression.ipynb  pyproject.toml  regression_trainer.ipynb  rf_upload.html  script.py  test.ipynb  tmp_cells.txt  train_regression.py  train_unet.py  trainer.py  visualizer.py  zip_data_loader.py
UNET_dataset/mask/Multicolor_Masks/: Read me.txt
apps/: app.py  script.py  train_regression.py  train_unet.py
checkpoints/: regression_model.pkl
datasets/UNET_dataset/: _classes.csv  classes.json
datasets/annotate/: classes.json
notebooks/: 2D-UNET-trainner.ipynb  regression_trainer.ipynb  regression_trainer_v2.ipynb
scripts/: annotator.py  dataset_downloader.py  export_models_onnx.py  export_regression_model.py  gradio_app.py  npk_pixel_predictor.py  rename_masks.py  training_server.py  training_ui.html
soil-segment-project/: .gitignore  main.ipynb  n_p_k_comp
src/annotations/: __init__.py  annotator.py  roboflow_uploader.py
src/predictions/: gradio_app.py  npk_pixel_predictor.py  npk_predictor.py  pellet_amount_predictor.py  reggrssor.py  regression.py
src/soil_segment/: __init__.py  app.py  config.py  custom_unet.py  regression.py  regression_trainer.py  script.py  train_regression.py  train_unet.py  trainer.py  unet_trainer.py  visualizer.py
src/soil_segment/app/: __init__.py  gradio_app.py
src/soil_segment/cli/: predict.py
src/soil_segment/models/: __init__.py  unet.py
src/soil_segment/training/: train_regression.py  train_unet.py
tests/: test_package_imports.py  test_unet_trainer_dataset.py
