[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soil-segment"
version = "0.1.0"
description = "2D soil segmentation and NPK prediction"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [
  { name = "Your Name" }
]
dependencies = [
  "torch",
  "torchvision",
  "numpy",
  "opencv-python",
  "pillow",
  "matplotlib",
  "joblib",
  "gradio",
  "scikit-learn",
  "seaborn",
]

[project.scripts]
soil-segment-train = "soil_segment.trainer:main"
soil-segment-viz = "soil_segment.visualizer:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["soil_segment*"]
